--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ຮ້ານ ຊາຄີມຊີດ</title>
+    <title>ຮ້ານ ຊາຄີມຊີດ ຊື້3ແຖມ1</title>
   </head>
   
   <body>
